fix width of listelement children so cursor is visible on newline

--- a/packages/editor/editor-input.css
+++ b/packages/editor/editor-input.css
@@ -79,6 +79,7 @@
   }
   ul[data-type="taskList"] label + div {
     padding-left: 0.5rem;
+    flex-grow: 1;
   }
   ul[data-type="taskList"] input[type="checkbox"] {
     opacity: 0;
